Move day04/*.h to day04/*.hpp

--- a/day04/CMakeLists.txt
+++ b/day04/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(day4 main.cpp
         solve1.cpp
-        solve1.h
+        solve1.hpp
         solve2.cpp
-        solve2.h
+        solve2.hpp
 )
